Framework: clean and comment
Make it easier for the older-me to know what the younger-me was thinking